Fix ViewModel namespace paths in Razor views

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.LoginViewModel
+@model GovSchedulaWeb.Models.ViewModels.LoginViewModel
 @{
     ViewData["Title"] = "Log In";
     Layout = "_AuthLayout"; // Specify to use the Auth layout
