--- a/Views/Account/SignUp.cshtml
+++ b/Views/Account/SignUp.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.SignUpViewModel
+@model GovSchedulaWeb.Models.ViewModels.SignUpViewModel
 @{
     ViewData["Title"] = "Sign Up";
     Layout = "_AuthLayout"; // Use the Auth layout
