--- a/Views/Booking/Confirmation.cshtml
+++ b/Views/Booking/Confirmation.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.BookingConfirmationViewModel
+@model GovSchedulaWeb.Models.ViewModels.BookingConfirmationViewModel
 @{
     ViewData["Title"] = "Booking Confirmed";
 }
