--- a/Views/Booking/Index.cshtml
+++ b/Views/Booking/Index.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.DepartmentSelectViewModel
+@model GovSchedulaWeb.Models.ViewModels.DepartmentSelectViewModel
 @{
     ViewData["Title"] = "Book Appointment";
 }
