--- a/Views/Dvla/NewLicense.cshtml
+++ b/Views/Dvla/NewLicense.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.DvlaNewLicenseViewModel
+@model GovSchedulaWeb.Models.ViewModels.DvlaNewLicenseViewModel
 @{ ViewData["Title"] = "New Driver's License"; }
 
 <div class="hero">
