--- a/Views/Dvla/RegisterVehicle.cshtml
+++ b/Views/Dvla/RegisterVehicle.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.DvlaVehicleRegistrationViewModel
+@model GovSchedulaWeb.Models.ViewModels.DvlaVehicleRegistrationViewModel
 @{ ViewData["Title"] = "Vehicle Registration"; }
 
 <div class="hero">
