--- a/Views/Dvla/RenewLicense.cshtml
+++ b/Views/Dvla/RenewLicense.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.DvlaLicenseRenewalViewModel
+@model GovSchedulaWeb.Models.ViewModels.DvlaLicenseRenewalViewModel
 @{ ViewData["Title"] = "Driver's License Renewal"; }
 
 <div class="hero">
