--- a/Views/ElectoralCommission/Register.cshtml
+++ b/Views/ElectoralCommission/Register.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.VoterRegistrationViewModel
+@model GovSchedulaWeb.Models.ViewModels.VoterRegistrationViewModel
 @{
     ViewData["Title"] = "Voter Registration";
 }
