--- a/Views/Gra/FileReturns.cshtml
+++ b/Views/Gra/FileReturns.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.TaxFilingViewModel
+@model GovSchedulaWeb.Models.ViewModels.TaxFilingViewModel
 @{
     ViewData["Title"] = "File Tax Returns";
 }
