--- a/Views/Nhis/Register.cshtml
+++ b/Views/Nhis/Register.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.NhisRegistrationViewModel
+@model GovSchedulaWeb.Models.ViewModels.NhisRegistrationViewModel
 @{
     ViewData["Title"] = "NHIS New Registration";
 }
