--- a/Views/Nhis/Renew.cshtml
+++ b/Views/Nhis/Renew.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.NhisRenewalViewModel
+@model GovSchedulaWeb.Models.ViewModels.NhisRenewalViewModel
 @{
     ViewData["Title"] = "NHIS Membership Renewal";
 }
