--- a/Views/Nia/Register.cshtml
+++ b/Views/Nia/Register.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.NiaRegistrationViewModel
+@model GovSchedulaWeb.Models.ViewModels.NiaRegistrationViewModel
 @{
     ViewData["Title"] = "Ghana Card Registration";
 }
