--- a/Views/Passport/Create.cshtml
+++ b/Views/Passport/Create.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.PassportApplicationViewModel
+@model GovSchedulaWeb.Models.ViewModels.PassportApplicationViewModel
 @{
     ViewData["Title"] = "New Passport Application";
     
