--- a/Views/Passport/Renew.cshtml
+++ b/Views/Passport/Renew.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.PassportRenewalViewModel
+@model GovSchedulaWeb.Models.ViewModels.PassportRenewalViewModel
 @{
     ViewData["Title"] = "Passport Renewal";
 }
