--- a/Views/Passport/Replace.cshtml
+++ b/Views/Passport/Replace.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.PassportReplacementViewModel
+@model GovSchedulaWeb.Models.ViewModels.PassportReplacementViewModel
 @{
     ViewData["Title"] = "Passport Replacement";
 }
