--- a/Views/Passport/ReviewDetails.cshtml
+++ b/Views/Passport/ReviewDetails.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.ReviewDetailsViewModel
+@model GovSchedulaWeb.Models.ViewModels.ReviewDetailsViewModel
 @{
     ViewData["Title"] = "Review Application Details";
 }
