--- a/Views/Passport/VerifyIdentity.cshtml
+++ b/Views/Passport/VerifyIdentity.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.VerifyIdentityViewModel
+@model GovSchedulaWeb.Models.ViewModels.VerifyIdentityViewModel
 @{
     ViewData["Title"] = "Verify Identity";
 }
