--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/home.css" /> 
     <link rel="stylesheet" href="~/css/departments.css" /> 
     <link rel="stylesheet" href="~/css/form.css" /> 
+    <link rel="stylesheet" href="~/css/admin.css" />
 
     @* <link rel="stylesheet" href="~/css/auth.css" />  *@
 
