--- a/Views/Account/SignUp.cshtml
+++ b/Views/Account/SignUp.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.SignUpViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model SignUpViewModel
 @{
     ViewData["Title"] = "Sign Up";
     Layout = "_AuthLayout"; // Use the Auth layout
