--- a/Views/Admin/Scanner.cshtml
+++ b/Views/Admin/Scanner.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.ScannerViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model ScannerViewModel
 @{
     ViewData["Title"] = "QR Code Scanner";
     // This page might eventually need its own simpler layout
