--- a/Views/Booking/Confirmation.cshtml
+++ b/Views/Booking/Confirmation.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.BookingConfirmationViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model BookingConfirmationViewModel
 @{
     ViewData["Title"] = "Booking Confirmed";
 }
