--- a/Views/ElectoralCommission/Register.cshtml
+++ b/Views/ElectoralCommission/Register.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.VoterRegistrationViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model VoterRegistrationViewModel
 @{
     ViewData["Title"] = "Voter Registration";
 }
