--- a/Views/Nhis/Register.cshtml
+++ b/Views/Nhis/Register.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.NhisRegistrationViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model NhisRegistrationViewModel
 @{
     ViewData["Title"] = "NHIS New Registration";
 }
