--- a/Views/Nia/Register.cshtml
+++ b/Views/Nia/Register.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.NiaRegistrationViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model NiaRegistrationViewModel
 @{
     ViewData["Title"] = "Ghana Card Registration";
 }
