--- a/Views/Passport/Create.cshtml
+++ b/Views/Passport/Create.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.PassportApplicationViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model PassportApplicationViewModel
 @{
     ViewData["Title"] = "New Passport Application";
     
