--- a/Views/Passport/ReviewDetails.cshtml
+++ b/Views/Passport/ReviewDetails.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.ReviewDetailsViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model ReviewDetailsViewModel
 @{
     ViewData["Title"] = "Review Application Details";
 }
