--- a/Views/Booking/Index.cshtml
+++ b/Views/Booking/Index.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.DepartmentSelectViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model DepartmentSelectViewModel
 @{
     ViewData["Title"] = "Book Appointment";
 }
