--- a/Views/Booking/SelectSlot.cshtml
+++ b/Views/Booking/SelectSlot.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.SelectSlotViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model SelectSlotViewModel
 @{
     ViewData["Title"] = "Select Appointment Slot";
 }
