--- a/Views/Dvla/NewLicense.cshtml
+++ b/Views/Dvla/NewLicense.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.DvlaNewLicenseViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model DvlaNewLicenseViewModel
 @{ ViewData["Title"] = "New Driver's License"; }
 
 <div class="hero">
