--- a/Views/Dvla/RegisterVehicle.cshtml
+++ b/Views/Dvla/RegisterVehicle.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.DvlaVehicleRegistrationViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model DvlaVehicleRegistrationViewModel
 @{ ViewData["Title"] = "Vehicle Registration"; }
 
 <div class="hero">
