--- a/Views/Dvla/RenewLicense.cshtml
+++ b/Views/Dvla/RenewLicense.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.DvlaLicenseRenewalViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model DvlaLicenseRenewalViewModel
 @{ ViewData["Title"] = "Driver's License Renewal"; }
 
 <div class="hero">
