--- a/Views/Gra/FileReturns.cshtml
+++ b/Views/Gra/FileReturns.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.TaxFilingViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model TaxFilingViewModel
 @{
     ViewData["Title"] = "File Tax Returns";
 }
