--- a/Views/Nhis/Renew.cshtml
+++ b/Views/Nhis/Renew.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.NhisRenewalViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model NhisRenewalViewModel
 @{
     ViewData["Title"] = "NHIS Membership Renewal";
 }
