--- a/Views/Passport/Renew.cshtml
+++ b/Views/Passport/Renew.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.PassportRenewalViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model PassportRenewalViewModel
 @{
     ViewData["Title"] = "Passport Renewal";
 }
