--- a/Views/Passport/Replace.cshtml
+++ b/Views/Passport/Replace.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.PassportReplacementViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model PassportReplacementViewModel
 @{
     ViewData["Title"] = "Passport Replacement";
 }
