--- a/Views/Passport/VerifyIdentity.cshtml
+++ b/Views/Passport/VerifyIdentity.cshtml
@@ -1,4 +1,5 @@
-@model GovSchedulaWeb.Models.ViewModels.VerifyIdentityViewModel
+@using GovSchedulaWeb.Models.Data.ViewModels
+@model VerifyIdentityViewModel
 @{
     ViewData["Title"] = "Verify Identity";
 }
