--- a/wwwroot/css/form.css
+++ b/wwwroot/css/form.css
@@ -67,6 +67,7 @@
   padding: 0.75rem 1rem; /* py-3 */
   font-size: 1rem;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05); /* shadow-sm */
+  box-sizing: border-box;
 }
 
 .formInput:focus,
