A change in the name of Voter's Application page

--- a/Views/ElectoralCommission/Register.cshtml
+++ b/Views/ElectoralCommission/Register.cshtml
@@ -34,7 +34,7 @@
 }
 
 <div class="hero">
-    <h1 class="heroTitle">Passport Application</h1>
+    <h1 class="heroTitle">Voter's ID Application</h1>
     <p class="heroSubtitle">Fill in the forms with the exact details on your birth certificate.</p>
     <button type="button" onclick="window.location.href='@Url.Action("Index", "Booking")'" class="backButton">
         <i class="fa-solid fa-arrow-left"></i> Back to Departments
