--- a/Views/Passport/Renew.cshtml
+++ b/Views/Passport/Renew.cshtml
@@ -1,4 +1,4 @@
-@using GovSchedulaWeb.Models.Data.ViewModels
+@*@using GovSchedulaWeb.Models.Data.ViewModels
 @model PassportRenewalViewModel
 @{
     ViewData["Title"] = "Passport Renewal";
@@ -39,10 +39,10 @@
                 </button>
             </div>
         </div>
-        @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> *@
+        @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> 
     </form>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
