--- a/Views/Passport/Replace.cshtml
+++ b/Views/Passport/Replace.cshtml
@@ -1,4 +1,4 @@
-@using GovSchedulaWeb.Models.Data.ViewModels
+@* @using GovSchedulaWeb.Models.Data.ViewModels
 @model PassportReplacementViewModel
 @{
     ViewData["Title"] = "Passport Replacement";
@@ -45,10 +45,10 @@
                 </button>
             </div>
         </div>
-         @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> *@
+         @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> 
     </form>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+} *@
