--- a/Views/Passport/ReviewDetails.cshtml
+++ b/Views/Passport/ReviewDetails.cshtml
@@ -1,4 +1,4 @@
-@using GovSchedulaWeb.Models.Data.ViewModels
+@* @using GovSchedulaWeb.Models.Data.ViewModels
 @model ReviewDetailsViewModel
 @{
     ViewData["Title"] = "Review Application Details";
@@ -77,4 +77,4 @@
     </style>
 }
 
-@section Scripts { }
+@section Scripts { } *@
