--- a/Views/Passport/VerifyIdentity.cshtml
+++ b/Views/Passport/VerifyIdentity.cshtml
@@ -1,4 +1,4 @@
-@using GovSchedulaWeb.Models.Data.ViewModels
+@* @using GovSchedulaWeb.Models.Data.ViewModels
 @model VerifyIdentityViewModel
 @{
     ViewData["Title"] = "Verify Identity";
@@ -24,4 +24,4 @@
     </div>
 </div>
 
-@section Scripts { }
+@section Scripts { } *@
