--- a/Views/Admin/LiveQueue.cshtml
+++ b/Views/Admin/LiveQueue.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.ViewModels.LiveQueueViewModel
+@* @model GovSchedulaWeb.Models.ViewModels.LiveQueueViewModel
 @{
     ViewData["Title"] = "Live Queue";
 }
@@ -65,4 +65,4 @@
             }
         </tbody>
     </table>
-</div>
+</div> *@
