--- a/Views/Booking/Index.cshtml
+++ b/Views/Booking/Index.cshtml
@@ -5,7 +5,15 @@
     var disabledServices = new List<string>
     {
         "Passport Renewal",
-        "Lost/Damaged Replacement"
+        "Lost/Damaged Replacement",
+        "New Registration",
+        "New Driver's License",
+        "License Renewal",
+        "Vehicle Registration",
+        "New Registration",
+        "Membership Renewal",
+        "Ghana Card Registration",
+        "File Tax Returns"
     };
 }
 
