--- a/Views/ElectoralCommission/RegistrationSuccess.cshtml
+++ b/Views/ElectoralCommission/RegistrationSuccess.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
     ViewData["Title"] = "Registration Submitted";
 }
 
@@ -14,4 +14,4 @@
 
 <div style="text-align: center; margin: 2rem;">
     <a asp-action="Index" asp-controller="Home" class="formButton submitButton">Back to Home</a>
-</div>
+</div> *@
