--- a/Views/ElectoralCommission/ReviewVoterDetails.cshtml
+++ b/Views/ElectoralCommission/ReviewVoterDetails.cshtml
@@ -1,4 +1,4 @@
-@model GovSchedulaWeb.Models.ViewModels.VoterRegistrationViewModel
+@* @model GovSchedulaWeb.Models.ViewModels.VoterRegistrationViewModel
 @{
     ViewData["Title"] = "Review Your Details";
 }
@@ -65,4 +65,4 @@
         </form>
 
     </div>
-</div>
+</div> *@
