--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="~/css/form.css" /> 
     <link rel="stylesheet" href="~/css/admin.css" />
 
-    @* <link rel="stylesheet" href="~/css/auth.css" />  *@
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" ... />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" ... />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
@@ -32,7 +34,7 @@
                     <a asp-controller="Home" asp-action="Index">Home</a>
                     <a asp-controller="Booking" asp-action="Index">Book Appointments</a>
                     <a asp-controller="Account" asp-action="Login">Sign In</a>
-                    <a href="#">Help</a>
+                    <a asp-controller="Home" asp-action="Help">Help</a>
                 </nav>
             </div>
         </header>
